src/test/run-pass/fn-bare-coerce-to-shared.rs
fn bare() {}

fn likes_shared(f: fn@()) { f() }

fn main() {
    likes_shared(bare);
}