src/test/compile-fail/log-type-error.rs
// error-pattern: mismatched types

fn main() {
  log main;
}

